# Local-MLOps-Configuration

./: .config_params  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  client.py  main.py  pyproject.toml  settings.py
.github/workflows/: data-drift-monitor.yml  deploy-production.yml  model-training.yml
k8s/: deployment.yaml
notebooks/: data_exploration.ipynb
src/api/: api_model.py  api_serving.py
src/data/: collect_data.py  preprocess_data.py
src/logging/: console_log.py
src/modelling/: test.py  train.py
src/monitoring/: check_drift.py
