[project]
name = "local-mlops-configuration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ucimlrepo>=0.0.7",
    "litserve>=0.2.5",
    "loguru>=0.7.3",
    "pydantic-settings>=2.7.0",
    "scikit-learn>=1.6.0",
]

[dependency-groups]
dev = [
    "imblearn>=0.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pre-commit>=4.0.1",
    "ruff>=0.8.4",
    "seaborn>=0.13.2",
]
